syntax = "proto3";

package otl_client.commands;
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message ClientCommand {
  oneof ClientCommands {
    SetCommands setter = 1;
    RunOne runone = 2;
    RunType runtype = 3;
    RunMany runmany = 4;
  }
}

message SetCommands { string command_content = 1; }
message RunOne { string command_name = 1; }
message RunMany { repeated string command_names = 1; }
message RunType {
  // Eventually, perhaps we should encode this as info in protobuf
  // not today babey
  string typeinfo = 1;
}

// This configuration is done once, when OTL is initialized
// The client should provide this when creating an otl handle
message ConfigureOtl {
  string otl_root = 1;
  uint64 job_slots = 2;
  oneof InitExecutor {
    CfgLocal local = 3;
    CfgDocker docker = 4;


  }
}

message CfgLocal {}

message CfgDocker {
  string image_name = 1;
  map<string, string> additional_mounts = 2;
}
